fix(scrollbar): fix scrollbar and theming it (#551245)

--- a/src/app/styles/main.scss
+++ b/src/app/styles/main.scss
@@ -7,6 +7,10 @@
 
   color: var(--text-color);
   box-sizing: border-box;
+
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
 }
 
 body {
@@ -21,7 +25,13 @@ body {
   background-color: var(--base-color);
 }
 
-#app {
+#app, .n-config-provider {
   width: 100%;
   height: 100%;
+}
+
+.n-config-provider {
+  max-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
